# omni-db

./: .env.example  Cargo.toml
.github/workflows/: rust.yml
sql/: create_table.sql
src/: main.rs
