[package]
name = "omni-db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["rt", "macros"]}
